<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".activities.MainActivity"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="16dp"
            android:src="@drawable/ramadan_app_icon"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/tvRamadan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/fiqah_and_city_selection"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:fontFamily="@font/poppins"
                android:text="@string/your_city"
                android:textAlignment="textStart"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:padding="4dp"
                android:textStyle="bold" />

            <android.widget.Spinner
                android:id="@+id/spCountry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.5"
                android:spinnerMode="dropdown"
                android:popupBackground="@color/white"
                android:backgroundTint="@color/colorPrimaryDark" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:fontFamily="@font/poppins"
                android:text="@string/your_fiqah"
                android:textAlignment="textStart"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:padding="4dp"
                android:textStyle="bold" />

            <android.widget.Spinner
                android:id="@+id/spFiqah"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.5"
                android:spinnerMode="dropdown"
                android:popupBackground="@color/white"
                android:backgroundTint="@color/colorPrimaryDark" />

        </LinearLayout>

        <android.widget.Button
            android:id="@+id/buttonGo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_back"
            android:fontFamily="@font/poppins_semibold"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="20dp"
            android:text="@string/go"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

    </LinearLayout>

</ScrollView>